--- a/mylibrary/src/main/res/layout/activity_id_camera.xml
+++ b/mylibrary/src/main/res/layout/activity_id_camera.xml
@@ -52,7 +52,7 @@
         android:gravity="center"
         android:padding="20dp"
         android:text="返回"
-        android:textColor="@color/white"
+        android:textColor="@color/camera_trans_black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
